// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Node Listing Metric Cell should format N/A as the metric for an offline node 1`] = `
<td
  class="kuiTableRowCell"
>
  <div
    class="kuiTableRowCell__liner"
  >
    <div
      class="monTableCell__number monTableCell__offline"
    >
      <span>
        N/A
      </span>
    </div>
  </div>
</td>
`;

exports[`Node Listing Metric Cell should format a non-percentage metric 1`] = `
<td
  class="kuiTableRowCell"
>
  <div
    class="kuiTableRowCell__liner"
  >
    <div
      class="monTableCell__metricCellMetric"
    >
      206.3 GB
    </div>
    <span
      class="monTableCell__metricCellSlopeArrow fa fa-long-arrow-down"
    />
    <div
      class="monTableCell__metricCellMixMax"
    >
      <div>
        206.5 GB max
      </div>
      <div>
        206.3 GB min
      </div>
    </div>
  </div>
</td>
`;

exports[`Node Listing Metric Cell should format a percentage metric 1`] = `
<td
  class="kuiTableRowCell"
>
  <div
    class="kuiTableRowCell__liner"
  >
    <div
      class="monTableCell__metricCellMetric"
    >
      0%
    </div>
    <span
      class="monTableCell__metricCellSlopeArrow fa fa-long-arrow-down"
    />
    <div
      class="monTableCell__metricCellMixMax"
    >
      <div>
        2% max
      </div>
      <div>
        0% min
      </div>
    </div>
  </div>
</td>
`;
